# arbitrage-bot

./: .env  .env.example  ARCHITECTURE.md  AVAX_MEV_BOT_技术文档.md  Cargo.toml  Cargo_simple.toml  README_SIMPLE.md  bot.md  note.md  代码对比分析.md
solidity/: arb.sol  note.md
src/: Cargo.toml  bot.md  main.rs  types.rs  项目代码结构分析文档.md
src/bindings/: Cargo.toml
src/bindings/src/: avaxarbexecutor.rs  iaavev3pool.rs  ierc20.rs  iuniswapv2pair.rs  lib.rs  stdconstants.rs
src/bot/: collector.rs  contract_executor.rs  executor.rs  mod.rs  start_bot.rs
src/bot/simulator/: foundry_simulator.rs  http_simulator.rs
src/common/: mod.rs  notification.rs
src/contract/: foundry.toml
src/contract/cache/: solidity-files-cache.json
src/contract/script/: Deploy.s.sol
src/contract/src/: AvaxArbExecutor.sol
src/core/: engine.rs  types.rs
src/core/collectors/: block.rs  mempool.rs  mod.rs
src/core/executor/: flashbot.rs  manager.rs  mempool.rs  mod.rs  traits.rs  (+1 more)
src/dex/: mod.rs  uniswap_v3.rs
src/indexer/: collector.rs  file_db.rs  strategy.rs  types.rs
src/simulator/: mod.rs
src/strategy/: arb.rs  arb_cache.rs  arbitrage_analyzer.rs  mod.rs  transaction_analyzer.rs  worker.rs
src/tools/: logger.rs  mod.rs  pool_ids.rs
src/utils/: coin.rs  link.rs  math.rs  mod.rs  object.rs  performance.rs  string.rs  token_config.rs
src1/: main.rs  main_simple.rs
src1/core/: mod.rs  types.rs
src1/strategy/: arbitrage.rs  mod.rs  stats.rs  traits.rs
src1/utils/: address.rs  time.rs  validation.rs
temp/: cex-dex.md  dex-dex.md  js版的分析.md  一些文章.md  具体实现.md  套利方向.md
(+44 files in other folders)
