[package]
name = "arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Web3 和以太坊相关
ethers = { version = "2.0", features = ["ws", "rustls"] }
alloy = { version = "0.1", features = ["node-bindings", "json-rpc", "provider-ws"] }

# WebSocket
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
url = "2.4"

# JSON 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置管理
dotenv = "0.15"
config = "0.13"

# 日志
log = "0.4"
env_logger = "0.10"
tracing = "0.1"

# 异步流
async-stream = "0.3"

# 错误处理
eyre = "0.6"
thiserror = "1.0"

# 数值计算
num-bigint = "0.4"
num-traits = "0.2"

# 并发和异步工具
async-trait = "0.1"
once_cell = "1.19"

# Foundry 集成
foundry-compilers = "0.3"

# 工具
hex = "0.4"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockall = "0.11"
